--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 
-  <title>React App</title>
+  <title>Shree Koderma Gaushala</title>
 </head>
 
 <body>
