open graph tags add min donation amount 51 for custom donation activity page shell added

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,17 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Shree Koderma Gaushala: Nurturing Cows, Preserving Traditions" />
+
+  <!-- open graph tags start -->
+  <meta property="og:title" content="Shree Koderma Gaushala" />
+  <meta property="og:description"
+    content="Dedicated to the welfare of cows, Shree Koderma Gaushala Samity embodies compassion and tradition, striving to protect and nurture these sacred animals" />
+  <meta property="og:image" content="/src/assets/cow.png" />
+  <meta property="og:url" content="kqrgaushala.org" />
+  <meta property="og:type" content="website" />
+  <!-- open graph tags end -->
+
   <link href="https://cdn.jsdelivr.net/npm/roboto-font@0.1.0/css/fonts.min.css" rel="stylesheet" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
@@ -33,7 +43,7 @@
     integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
     crossorigin="anonymous"></script>
 
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
 </body>
 
